--- a/templates/index.html
+++ b/templates/index.html
@@ -2,64 +2,75 @@
 <html lang="en">
 
 <head>
+  <title>Spotify Search</title>
 
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
   
       <!-- Bootstrap CSS -->
-      
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-      <link rel="stylesheet" href="static/css/style.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="/static/css/style.css">
       <script src="https://d3js.org/d3.v5.min.js"></script>
-
-
-  <title>Music</title>
 
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <script>
+    // Fade in on start
+    $(document).ready(function() {
+      $("body").hide().fadeIn(2000);
+    });
+  </script>
+
+  <div class="container-fluid pt-3">
+    <nav class="navbar navbar-expand-sm bg-secondary navbar-dark  fixed-top">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link" href="#">Visualizations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Stats</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Visualizations</a>
+              <a class="nav-link disabled" href="#">About us</a>
             </li>
           </ul>
-        </div>
+        </nav>
+        
       </div>
     </nav>
   </div>
 
   <!-- User´s Search -->
-  <div class="container" id='search'>
-    <div class="jumbotron text-center">
-      <h1>Music Search</h1>
+  <div class="jumbotron" >
+  </div>
+    <div class="container push-spaces" >
+      <div class="t1">The stats of music</div>
+      <div class="t2">Search the music of Spotify by year and see what happens..! </div>
+      <form>
+        <div class="input-group mb-3 ">
+          <div class="input-group-prepend">
+          </div>
+          <input type="text" class="form-control" id="searchInput" placeholder="Enter the year...(yyyy)">
+          <div class="input-group-append">
+            <button id="submit"  class="t3" type="submit">Search</button>  
+           </div>
+     
+        
+      </form>
     </div>
-    <div class="container" id='searchbar'>
-      <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <div class="input-group mb-3">
-            <form class="form-inline">
-              <div class="form-group">
-                <input type="text" class="form-control" id="searchInput" placeholder="Enter a year">
-              </div>
-              <button id="submit" type="submit" class="btn btn-dark">Search</button>
-            </form>
+
+    </div>
+          </form>
             <div id="plot"></div>
-            <script src="static/js/plots.js"></script>
+            <script src="/static/js/plots.js"></script>
           </div>
         </div>
       </div>
@@ -69,8 +80,8 @@
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
   </script>
-  <script src="require.js"></script>
 </body>
 
 </html>
+
 
