--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,39 @@
-<<<<<<< HEAD:static/css/style.css
 
-h1{
-    color: steelblue;
-    font-size: xx-large;
-    font-weight: bold;
+.t1 {
+    font-family:'Segoe UI';
+    text-align: center;
+    line-height: 100px;
+    margin-top: 5vh;
+    color: #a0a0a0;
+    font-size: 6em;
+    bold:
+  }
+  
+.t2{
+    font-family: 'Segoe UI';
+    text-align: center;
+    margin-top: 1vh;
+    margin-bottom: 5vh;
+    color: #a0a0a0;
+    font-size: 1.5em;
 }
 
-h2{
-    color: steelblue;
-    font-size: x-large;
-    font-weight: bold;
-}
+.t3 {
+    font-family: 'Segoe UI';
+    text-align: center;
+    font-size: 1em;
+    background-color: #d1d1d1;
+    border: none;
+    color: black;
+    padding: 0.4em 0.8em;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  .t3:hover {
+    outline: none;
+  }
 
 #search {
     position: absolute;
@@ -23,33 +46,39 @@ h2{
     width: 580px;
     height: 30px;
   }
+  
+div {
+    position:relative;
+    }
+#nav {
+    position:absolute;
+    left:50%;top:0;
+    margin-left:-375px; /* negative margin equal to half the width */
+    width:750px;
+    list-style:none;
+    }
+#nav li {
+    float:left;
+    }
+#nav a {
+    display:block;
+    text-align:center;
+    width:150px; /* fixed width */
+    text-decoration:none; 
+    font-size: 1.5em;
+    }
+.jumbotron{
+        background-color:transparent !important; 
+        padding-top: 10rem;
+        padding-bottom: 10rem;
 
+    }
 
-=======
-
-h1{
-    color: steelblue;
-    font-size: xx-large;
-    font-weight: bold;
+.push-spaces
+{
+    height: 100px;
 }
-
-h2{
-    color: steelblue;
-    font-size: x-large;
-    font-weight: bold;
+.back{
+background: url("spotifyCode.png") no-repeat center center; 
+text-align: center;
 }
-
-#search {
-    position: absolute;
-    
-}
-
-#searchbar {
-    top: 260px;
-    left: 375px;
-    width: 580px;
-    height: 30px;
-  }
-
-
->>>>>>> f059fd1b57ea682597fcfd224e6774de0d85cb84:style.css
