--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="/static/css/style.css">
       <script src="https://d3js.org/d3.v5.min.js"></script>
+      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 </head>
 
@@ -72,21 +73,25 @@
             <button id="submit"  class="t3" type="submit">Search</button>  
            </div>
            <ul id="ul"></ul>
-     
-        
       </form>
     </div>
-  </div>
-
-    </div>
+    <div class="container">
+      <div class="row justify-content-start">
+        <div class="col" id="plot1" >
+        </div>
+        <div class="col" id="plot2">
+        </div>
       </div>
     </div>
-  </div>
 
+      
+        <div id="plot1"></div>
+        <div id="plot2"></div>
+  <script src="static/js/plots.js"></script>
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
   </script>
-  <script src="static/js/plots.js"></script>
+
 </body>
 
 </html>
